fix color of item name to be more visible

--- a/src/App.css
+++ b/src/App.css
@@ -1023,7 +1023,7 @@ body {
 
 .item-name {
     font-size: 16px;
-    color: #374151;
+    color: #f9fafb;
     font-weight: 500;
     transition: all 0.3s;
 }
